# convolutions-rs

./: .gitignore  Cargo.toml  README.md  input_rand_same_shapes.npy  out1.npy  output.npy  simple_example_input.npy  y_hat.npy
scripts/: README.md  environment.yml  generate_tests.py
src/: convolutions.rs  lib.rs  transposed_convolutions.rs
tests/: .conv2d_transpose_stride2_automated_test.rs.swp  TESTconv2d_transpose_stride2_automated_test.rs  conv2d_automated_test.rs  conv2d_stride1_same_automated_test.rs  conv2d_stride1_same_bias_automated_test.rs  conv2d_stride1_valid_automated_test.rs  conv2d_stride1_valid_bias_automated_test.rs  conv2d_stride1_valid_both_automated_test.rs  conv2d_stride2_automated_test.rs  conv2d_stride2_bias_torch_automated_test.rs  conv2d_stride2_same_automated_test.rs  conv2d_stride2_same_bias_automated_test.rs  conv2d_stride2_same_torch_automated_test.rs  conv2d_stride2_torch_automated_test.rs  conv2d_stride2_valid_automated_test.rs  conv2d_stride2_valid_bias_automated_test.rs  conv2d_stride2_valid_torch_bias_automated_test.rs  conv2d_torch_automated_test.rs  conv2d_transpose_automated_test.rs  conv2d_transpose_fringe_padding.rs  conv2d_transpose_stride1_same_automated_test.rs  conv2d_transpose_stride1_same_bias_automated_test.rs  conv2d_transpose_stride1_valid_automated_test.rs  conv2d_transpose_stride1_valid_bias_automated_test.rs  conv2d_transpose_stride1_valid_torch_bias_automated_test.rs  conv2d_transpose_stride2_automated_test.rs  conv2d_transpose_stride2_same_automated_test.rs  conv2d_transpose_stride2_same_bias_automated_test.rs  (+13 more)
(+9 files in other folders)
