[package]
name = "convolutions-rs"
version = "0.2.1"
edition = "2018"
license = "MIT"
description = "Fast, minimal dependency, completely Rust implementation of convolutions for machine learning."
repository = "https://github.com/Conzel/convolutions-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
num-traits = "0.2.14"
ndarray-npy = "0.8.1"
